RESOLVED FIXED52118
In WebKit2, PDF view settings (mode and scale) do not stick
https://bugs.webkit.org/show_bug.cgi?id=52118
Summary In WebKit2, PDF view settings (mode and scale) do not stick
mitz
Reported 2011-01-08 17:40:49 PST
In WebKit2, PDF view settings (mode and scale) do not stick
Attachments
Add support for double-valued preferences; save and restore PDF scale and mode (18.88 KB, patch)
2011-01-08 17:55 PST, mitz
sam: review+
mitz
Comment 1 2011-01-08 17:41:47 PST
mitz
Comment 2 2011-01-08 17:55:13 PST
Created attachment 78337 [details] Add support for double-valued preferences; save and restore PDF scale and mode
Sam Weinig
Comment 3 2011-01-08 21:58:36 PST
Comment on attachment 78337 [details] Add support for double-valued preferences; save and restore PDF scale and mode View in context: https://bugs.webkit.org/attachment.cgi?id=78337&action=review > WebKit2/UIProcess/API/mac/PDFViewController.mm:134 > + WebKit::WebPreferences *preferences = WebKit::toImpl([_pdfViewController->wkView() pageRef])->pageGroup()->preferences(); The * should be on the other side. This file should also probably just add using namespace WebKit to the top if possible.
mitz
Comment 4 2011-01-08 22:08:27 PST
Note You need to log in before you can comment on or make changes to this bug.