<rdar://problem/8812759> In WebKit2, PDF view settings (mode and scale) do not stick https://bugs.webkit.org/show_bug.cgi?id=52118

Reviewed by Sam Weinig.

* Shared/WebPreferencesStore.cpp:
(WebKit::WebPreferencesStore::encode): Encode the double values map.
(WebKit::WebPreferencesStore::decode): Decode the double values map.
(WebKit::defaultValueForKey): Added double instance.
(WebKit::WebPreferencesStore::setDoubleValueForKey): Added.
(WebKit::WebPreferencesStore::getDoubleValueForKey): Added.
* Shared/WebPreferencesStore.h: Added PDFScaleFactor and PDFDisplayMode preferences.
* UIProcess/API/mac/PDFViewController.mm:
(-[WKPDFView initWithFrame:PDFViewController:WebKit::]): Initialize the _pdfViewController ivar.
(-[WKPDFView invalidate]): Changed 'nil' to '0' in assignment to a non-Objective-C pointer.
(-[WKPDFView setDocument:]): Added.
(-[WKPDFView _applyPDFPreferences]): Added.
(-[WKPDFView _updatePreferences:]): Added.
(-[WKPDFView _updatePreferencesSoon]): Added.
(-[WKPDFView _scaleOrDisplayModeOrPageChanged:]): Added.
(-[WKPDFView viewDidMoveToWindow]): Added. Starts observing the PDF view for changes to scale
and display mode.
(-[WKPDFView viewWillMoveToWindow:]): Added. Stops observing for changes.
(WebKit::PDFViewController::setPDFDocumentData): Changed to call throguh -[WKPDFView setDocument:].
* UIProcess/WebPreferences.cpp:
(WebKit::WebPreferences::updateDoubleValueForKey): Added.
* UIProcess/WebPreferences.h:
* UIProcess/cf/WebPreferencesCF.cpp:
(WebKit::WebPreferences::platformUpdateDoubleValueForKey): Added empty implementation.
* UIProcess/gtk/WebPreferencesGtk.cpp:
(WebKit::WebPreferences::platformUpdateDoubleValueForKey): Added stub.
* UIProcess/mac/WebPreferencesMac.mm:
(WebKit::setDoubleValueIfInUserDefaults): Added.
(WebKit::WebPreferences::platformUpdateDoubleValueForKey): Added.
* UIProcess/qt/WebPreferencesQt.cpp:
(WebKit::WebPreferences::platformUpdateDoubleValueForKey): Added.



Canonical link: https://commits.webkit.org/65658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75344 268f45cc-cd09-0410-ab3c-d52691b4dbfc