WebKit2/UIProcess/cf/WebPreferencesCF.cpp
@@ -45,6 +45,10 @@ void WebPreferences::platformUpdateUInt32ValueForKey(const String&, uint32_t)
 {
 }
 
+void WebPreferences::platformUpdateDoubleValueForKey(const String&, double)
+{
+}
+
 } // namespace WebKit
 
 #endif // !PLATFORM(MAC)
